# Sort me often using ./scripts/sort-pyproject-toml.sh

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm[toml]~=8.1.0",
    "setuptools~=75.2.0",
    "wheel~=0.44.0",
]

[project]
authors = [{ email = "sspencer@arine.io", name = "Shane R. Spencer" }]
description = "Arine: Tools: Greenhouse"
dynamic = ["dependencies", "optional-dependencies", "version"]
name = "arine-tools-greenhouse"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
arine-tools-greenhouse = "arine.tools.greenhouse.cli.app:entrypoint"

[project.urls]
homepage = "https://github.com/sspencer-arine/arine-tools-greenhouse-python"

[tool.black]
line-length = 120

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "$version"
update_changelog_on_bump = true
version_provider = "scm"
version_scheme = "pep440"

[tool.flake8]
doctests = true
max-line-length = 120
per-file-ignores = """
    tests/**: S101
"""

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
namespace_packages = true

[tool.setuptools.dynamic.dependencies]
file = ["./requirements/production.in"]

[tool.setuptools.dynamic.optional-dependencies]
development = { file = ["./requirements/development.in"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
